# Project1

./: .gitlab-ci.yml
docs/introduction/: howtoget.rst
docs/whitedoc/: michelson.rst
src/bin_node/: dune  node_config_command.ml  node_config_file.ml
src/lib_base/: mempool.ml  mempool.mli
src/lib_error_monad/: error_monad.ml  error_monad_sig.ml
src/lib_p2p/: p2p.ml
src/lib_protocol_updater/: registered_protocol.mli
src/lib_shell/: block_directory.ml  block_validator.ml  block_validator.mli  chain_directory.ml  chain_validator.ml  chain_validator.mli  distributed_db.ml  mempool_advertiser.ml  mempool_advertiser.mli  mempool_batch_processor.ml  mempool_batch_processor.mli  mempool_filters.ml  mempool_filters.mli  mempool_helpers.ml  mempool_helpers.mli  mempool_peer_worker.ml  mempool_peer_worker.mli  mempool_validator.ml  mempool_validator.mli  mempool_worker.ml  mempool_worker.mli  monitor_directory.ml  node.ml  node.mli  operation_validator.ml  operation_validator.mli  peer_validator.ml  peer_validator.mli  prevalidation.ml  prevalidation.mli  prevalidator.ml  prevalidator.mli  prevalidator_filters.ml  prevalidator_filters.mli  prevalidator_globals.mli  prevalidator_sigs.ml  prevalidator_sigs.mli  prevalidator_workers.ml  prevalidator_workers.mli  proto_plugin.ml  (+6 more)
src/lib_shell_services/: block_services.ml  block_services.mli  chain_services.ml  chain_services.mli  shell_services.ml  shell_services.mli
src/lib_signer_backends/: ledger.ml
src/proto_alpha/lib_mempool/: dune  filter.ml  filters.ml  gossip.ml  plugin.ml
tests_python/: requirements.txt
(+14 files in other folders)
