(library
 (name tezos_mempool_alpha)
 (public_name tezos-mempool-alpha)
 (libraries tezos-base
            tezos-embedded-protocol-alpha)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_embedded_raw_protocol_alpha
                   -open Tezos_embedded_protocol_alpha)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
